<resources>
    <string name="mapbox_key">pk.eyJ1IjoiZHVuaWFkYW51IiwiYSI6Ii02R2M3ekUifQ.Gr5zpPA2nEHYeqqSz1yRQw</string>
    <string name="app_name_pantau">Pantau Merapi</string>
    <string name="pantau_merapi">PANTAU MERAPI</string>
    <string name="info_radius_berbahaya">Info Radius Berbahaya</string>
    <string name="menu_lain">Menu Lain</string>
    <string name="lokasi_anda">Lokasi Anda</string>
    <string name="pos_pengamatan">Pos Pengamatan</string>
    <string name="pos_pengungsi">Pos Pengungsi</string>
    <string name="media_center">Media Center</string>
    <string name="zona_krb">Zona KRB</string>
    <string name="aktivitas_merapi">Aktivitas Merapi</string>
    <string name="info_lokasi">Info Lokasi</string>
    <string name="jarak_dari_puncak">Jarak dari puncak</string>
    <string name="lokasi_pos_pengamatan">Lokasi Pos Pengamatan</string>
    <string name="lokasi_pos_pengungsi">Lokasi Pos Pengungsi</string>
    <string name="info_zona">Info Zona</string>
    <string name="spasi">-</string>
    <string name="http_www_merapi_bgl_esdm_go_id">http://www.merapi.bgl.esdm.go.id/</string>
    <string name="https_twitter_com_bpptkg">https://twitter.com/bpptkg</string>
    <string name="bpptkg">\@BPPTKG</string>
    <string name="merapi_bgl_esdm_go_id">merapi.bgl.esdm.go.id</string>
</resources>
