<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/btn_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:paddingTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/colorHeaderHome">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/ic_bg3" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="5dp"

                        android:text="@string/pantau_merapi"
                        android:textColor="@android:color/white"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/bg_status"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingLeft="25dp"
                        android:paddingRight="25dp"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:text="-"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_more_vert_black_24dp" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:text="@string/info_radius_berbahaya" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#FF9900">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:textSize="18sp"
                        android:textColor="@android:color/white"
                        android:text="-" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:text="@string/menu_lain" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/btn_lokasi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="#EBEBEB"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="80dp">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:paddingBottom="5dp"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:textSize="11sp"
                            android:text="@string/lokasi_anda" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_above="@id/textView6"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            app:srcCompat="@drawable/ic_001_compass" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/btn_pos_pengamatan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="#EBEBEB"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="70dp">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:paddingBottom="5dp"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:textSize="11sp"
                            android:text="@string/pos_pengamatan" />

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_above="@id/textView7"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            app:srcCompat="@drawable/ic_002_binoculars" />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/btn_pos_pengungsi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="#EBEBEB"
                    android:layout_weight="1">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="70dp">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:paddingBottom="5dp"
                            android:layout_margin="5dp"
                            android:textSize="11sp"
                            android:gravity="center"
                            android:text="@string/pos_pengungsi" />

                        <ImageView
                            android:id="@+id/imageView9"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_above="@id/textView8"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            app:srcCompat="@drawable/ic_004_tent" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/btn_aktivitas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="#EBEBEB"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="80dp">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:paddingBottom="5dp"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:textSize="11sp"
                            android:text="@string/aktivitas_merapi" />

                        <ImageView
                            android:id="@+id/imageView13"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_above="@id/textView10"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            app:srcCompat="@drawable/ic_006_x_ray" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/btn_zona_krb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="#EBEBEB"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="70dp">

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:paddingBottom="5dp"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:textSize="11sp"
                            android:text="@string/zona_krb" />

                        <ImageView
                            android:id="@+id/imageView18"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_above="@id/textView17"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            app:srcCompat="@drawable/ic_003_navigation" />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/btn_media_center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="#EBEBEB"
                    android:layout_weight="1">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="70dp">

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:paddingBottom="5dp"
                            android:layout_margin="5dp"
                            android:textSize="11sp"
                            android:gravity="center"
                            android:text="@string/media_center" />

                        <ImageView
                            android:id="@+id/imageView19"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_above="@id/textView18"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            app:srcCompat="@drawable/ic_005_walkie_talkie" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>




    </android.support.v4.widget.SwipeRefreshLayout>
</android.support.constraint.ConstraintLayout>